# libabf

./: .gitmodules  CMakeLists.txt  Makefile  abf2struct_packedsizes.txt  abf2struct_unpackedsizes.txt  makefile  project.yml  rakefile.rb
ABFFIO/: SimpleStringCache.cpp
AxAbfFio32/: ABFERROR.STR  ABFFILES.H  ABFINFO.CPP  ABFINFO.H  Axabffio32.dep  CABFHDR.CPP  CABFHDR.HPP  DOSPRNT.CPP  DOSPRNT.H  HEADER.CPP  HEADER.DEP  PLAYWAV.HPP  TextBuffer.hpp  VOICETAG.HPP
AxAtfFio32/: ATFUTIL.CPP  INITLIZE.CPP  WINCPP.CPP  axatffio32.H
AxonValidation/: AxonValidation.mak
Common/: AcqTimer.cpp  AfxGDIObj.hpp  AutoDeleteTempFile.hpp  AxonPaths.h  BufferedArray.cpp  BufferedArray.hpp  CHighResTimer.hpp  CSystemException.cpp  CUnknown.hpp  ComDebug.cpp  Commctrl40.h  DlgPos.cpp  DlgPos.hpp  FileIOEx.CPP  FloatRect.hpp  MMF_Image.cpp  MMF_Image.hpp  PollingThread.hpp  RecursionCounter.hpp  RepeatButton.hpp  StringCache.hpp  TDrawWnd.cpp  TiffIO.cpp  TiffIO.hpp  ToolTip.hpp  axodebug.h  axodefn.h  filepath.cpp  msdos.h  oledebug.h  stdafx.h  version.hpp
axon/ABFFIO/: ProtocolReaderABF2.hpp  ProtocolWriterABF2.cpp  ProtocolWriterABF2.hpp
axon/AxAbfFio32/: ABFFILES.CPP  ABFHWAVE.CPP  ABFSWAP.CPP  ABFSWAP.H  ABFUTIL.CPP  Abflib.dep  Abflib.dsp  Abflib.dsw  Abfvtags.cpp  AudioFileHeader.h  AxAbfFio32.def  Axabffio32.cpp  Axabffio32.dsp  Axabffio32.dsw  Axabffio32.mak  Axabffio32.rc  Axabffio32.rc2  CABFHDR.CPP  CPARAM.H  CSYNCH.CPP  ClockRatio.hpp  DACFile.hpp  FILEDESC.HPP  HEADER.CPP  HEADER.DSP  HEADER.DSW  HEADER.MAK  Header.h  MAKEFILE  Oldheadr.cpp  PLAYWAV.CPP  PopulateEpoch.cpp  PopulateEpoch.hpp  SimpleStringCache.cpp  SimpleStringCache.hpp  StringResource.CPP  StringResource.H  TextBuffer.cpp  UserList.cpp  UserList.hpp  (+4 more)
axon/AxAtfFio32/: ATFERROR.STR  MAKEFILE  RESOURCE.H  WINCPP.HPP  axatffio32.RC2  axatffio32.dep  axatffio32.dsp  axatffio32.dsw  axatffio32.mak  fileio.CPP
axon/AxonValidation/: AxonValidation.dsp  AxonValidation.dsw  AxonValidation.mak  TextFormat.cpp  Validation.cpp  wincpp.hpp
axon/Common/: AIWBroadcastMsg.h  ATFFileIO.cpp  ATFFileIO.hpp  AVIWriter.hpp  AXAPPMSG.H  AXODEBUG.CPP  AXODEFN.H  AXOP.H  Afxmt.hpp  ArrayPtr.hpp  AutoDel.h  AutoRegKey.hpp  AxoLogEventUtil.cpp  AxoLogEventUtil.hpp  AxoTextPrint.cpp  AxoTextPrint.h  CLowResTimer.hpp  CMMFSharedData.hpp  CMultimediaTimer.hpp  CPICTWND.CPP  CPICTWND.HPP  CRC16.cpp  CRC16.h  CSystemException.hpp  ClampexBroadcastMsg.h  (+82 more)
axon2/: ABF2Reader.pyx
docs/: abf2struct_packedsizes.txt  goals.rst  style.rst
libaxon/: ABF2.pyx  ABF2.pyx~  axon.cpp  axon.h  axon.i  axon.py  axon_defs.h  axon_pywrap.cpp  axon_structs.h  fizzbuzz.py  fizzbuzz.py~  setup.py  setup.py~
mocks/: MockFile.h
src/: ABF2_struct.h  CMakeLists.txt  abf2.c  abf2.h  abf2_info.c  abf2_print.c  abf2_print.h  abf2_printfileinfo.c  abf2_printprotocolinfo.c  abf2_read.c  abf2_read.h  abf2_stream.c  abf2_stream.h  abf2_struct.h  abf_print.h  abf_read.c  abf_read.h  abf_struct.h  deserialize.c  deserialize.h  list.h  memory.c  speed_deser.c  swap.c  swap.h
src/ABFFIO/: ProtocolReaderABF2.cpp  ProtocolReaderABF2.hpp  ProtocolStructs.h  ProtocolWriterABF2.cpp  ProtocolWriterABF2.hpp  SimpleStringCache.hpp
src/AxAbfFio32/: ABFHEADR.CPP  ABFHEADR.H  ABFUTIL.H  Abflib.mak  CPARAM.CPP  CSYNCH.HPP  DACFile.CPP  DACFile.hpp  HEADER.MAK  Header.rc  MSBINCVT.CPP  Oldheadr.h  SamplingIntervalList.hpp  abffiles.h  abfheader.h  csynch.hpp  filedesc.cpp  filedesc.hpp  notify.hpp  voicetag.hpp
src/AxAtfFio32/: ATFUTIL.H  WINCPP.HPP  axatffio32.CPP  axatffio32.DEF  axatffio32.RC
src/AxoUtils32/: axoutils32.h
src/AxonValidation/: AxonValidation.h  FloatFormat.cpp  wincpp.hpp
src/Common/: AVIWriter.cpp  AcqTimer.hpp  AfxUtils.hpp  AxoLogEventUtil.cpp  BufferedArray.hpp  CUnknown.cpp  ComDateTime.cpp  ComDateTime.hpp  ComDebug.h  DisplaySurface.hpp  Dongle.hpp  FileReadCache.cpp  Median.hpp  MedianFilter.h  Popmenu.cpp  Popmenu.hpp  StringCache.cpp  StringResource.hpp  WaitCursor.hpp  axappmsg.h  axodebug.h  cpictwnd.cpp  crc.h  crc16.cpp  crc16.h  linestream.cpp  mrustr.cpp  mrustr.hpp  unix.h  util.h  version.cpp  win32.h
src/File/: .#File.h  File.h  InMemoryFile.c  InMemoryFile.h
src/Stream/: MemStream.c  MemStream.h  Stream.c  Stream.h
src/abf/: abf_print.c  abf_print.h  abf_read.c  abf_read.h  abf_string.c  abf_string.h  abf_struct.h
src/abf2/: abf2_info.c  abf2_print.c  abf2_stream.c
src/lib/: memory.h  printutil.c  printutil.h
src/serialize/: deserialize.c  deserialize.h
src/stream/: CMakeLists.txt  memstream.c  memstream.h  stream.c  stream.h
test/: CMakeLists.txt  testDataSizes.c  testSwapBytes.c  test_ABF2Compile.cpp  test_DataSizes.cpp  test_InMemoryFile.cpp  test_MemStream.c  test_MemStream.cpp  test_MemStreamCreation.c  test_Stream.c  test_abf2.c  test_abf2_print.c  test_abf2_read.c  test_abf2_stream.c  test_abf_read.c  test_abf_string.c  test_deser.c  test_list.c  test_memstream.c  test_memstream_creation.c  test_stream.c  test_swap.c
test/support/: CMakeLists.txt  streamtest_utils.c  streamtest_utils.h
unity/: gcc.yml  rakefile.rb  rakefile_helper.rb
(+10 files in other folders)
